# nachricht

./: .gitignore  Cargo.toml  README.md  scratch.rs
example/: Cargo.toml  README.md
example/src/: main.rs
nachricht/: Cargo.toml  README.md
nachricht-nq/: Cargo.toml  README.md
nachricht-nq/src/: main.rs  parser.rs
nachricht-serde/: Cargo.toml  README.md
nachricht-serde/src/: de.rs  error.rs  lib.rs  preser.rs  ser.rs
nachricht/src/: error.rs  field.rs  fixed.rs  header.rs  lib.rs  savevec.rs  value.rs
