[package]
name = "example"
version = "0.1.0"
authors = ["Liv <liv.fischer@senacor.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
nachricht = { path = "../nachricht" }
nachricht-serde = { path = "../nachricht-serde" }
anyhow = "1.0"
serde_json = "1.0"
rmp-serde = "0.15.0"
