[package]
name = "nachricht-nq"
version = "0.4.0"
authors = ["Liv Fischer <liv.fischer@senacor.com>"]
license = "MIT"
description = "Pretty printing of nachricht messages"
repository = "https://github.com/yasammez/nachricht"
documentation = "https://docs.rs/nachricht-nq"
readme = "README.md"
keywords = ["nachricht", "serialization"]
categories = ["encoding"]
edition = "2021"

[[bin]]
name = "nq"
path = "src/main.rs"

[dependencies]
nachricht = { path = "../nachricht", version = "0.4.0" }
anyhow = "1.0"
structopt = "0.3"
nom = "6"
base64 = "0.13"
edit = "0.1.3"
