[package]
name = "nachricht-serde"
version = "0.3.2"
authors = ["Liv <liv.fischer@senacor.com>"]
license = "MIT"
description = "Serde bindings for nachricht"
repository = "https://github.com/yasammez/nachricht"
documentation = "https://docs.rs/nachricht-serde"
readme = "README.md"
keywords = ["nachricht", "serialization", "serde"]
categories = ["encoding"]
edition = "2018"

[dependencies]

serde = "1.0"
nachricht = { path = "../nachricht", version = "0.2.1" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
