[package]
name = "nachricht-serde"
version = "0.4.0"
authors = ["Liv <liv.fischer@senacor.com>"]
license = "MIT"
description = "Serde bindings for nachricht"
repository = "https://github.com/yasammez/nachricht"
documentation = "https://docs.rs/nachricht-serde"
readme = "README.md"
keywords = ["nachricht", "serialization", "serde"]
categories = ["encoding"]
edition = "2021"

[dependencies]

serde = "1.0"
nachricht = { path = "../nachricht", version = "0.4.0" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"