[package]
name = "nachricht"
version = "0.2.1"
authors = ["Liv <liv.fischer@senacor.com>"]
license = "MIT"
description = "Implementation of the nachricht wire format"
repository = "https://github.com/yasammez/nachricht"
documentation = "https://docs.rs/nachricht"
readme = "README.md"
keywords = ["nachricht", "serialization"]
categories = ["encoding"]
edition = "2018"

[dependencies]
